# swift-desktop

./: .gitignore  Cargo.toml  README.md  rpkg.conf  swift-desktop.spec
src/libswift/: Cargo.toml
src/libswift/src/: lib.rs
src/libswift/src/widgets/: mod.rs  swift_accent_button.rs
src/swift-about/: .gitignore  Cargo.toml  swift-about.rpkg.spec
src/swift-about/po/: pl.po
src/swift-about/res/: swift-about.desktop
src/swift-about/res/licenses/: bsd-3-clause.txt
src/swift-about/src/: contributors.rs  main.rs  metadata.rs
src/swift-cfg/: Cargo.toml  README.md
src/swift-cfg/res/: defaults.toml  swift-cfg.service
src/swift-cfg/src/: interface.rs  main.rs  store.rs
src/swift-ctl/: Cargo.toml  README.md
src/swift-ctl/src/: main.rs
