# Copyright (C) 2026  Kamil Machowski
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "swift-cfg"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zbus = "4.0"
tokio = { version = "1.0", features = ["full"] }
serde = { workspace = true }
toml = "0.8"
futures-util = { workspace = true }
